<resources>
    <string name="app_name">endevinaNumero</string>
    <string name="tittle_main">Benvingut</string>
    <string name="send">Enviar</string>
    <string name="indication">Introdueix el teu usuari:</string>
    <string name="write_message">Escriu la teva resposta</string>
    <string name="description">Et proposo un repte: Endevina el número que estic pensant</string>
    <string name="go_back">Enrere</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="error">Error</string>
    <string name="succes">Correcte</string>
    <string name="descripton_error">No has encertat el número 💀</string>
    <string name="descripton_succes">Has encertat el número ✅</string>
    <string name="resultats">Resultats:</string>
</resources>