<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity_succes"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:padding="16dp"
    tools:context=".SuccessActivity">

    <TextView
        android:id="@+id/tvtittle_succes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/succes"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewDescrption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvtittle_succes"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/background_text_succes"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/descripton_succes"
                android:textSize="23sp"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/viewDescrption"
        app:layout_constraintBottom_toTopOf="@+id/viewgoBack"
        app:cardBackgroundColor="@color/background_text_succes"
        app:cardCornerRadius="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="18dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:text="@string/resultats"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/tvNumUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="El teu número: "
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/tvNumRand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Número a encertar: "
                android:layout_marginTop="60dp"
                android:textColor="@color/white"
                android:textSize="30sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/viewgoBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="@color/background_activity_succes">
        <Button
            android:id="@+id/btngoBack"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/go_back"
            android:textSize="30sp"
            android:backgroundTint="@color/buton_startActivity">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>